# Custom-LangFlow-Component

./: EXAMPLE_FLOW.json  LOCAL_SETUP_GUIDE.md  README.md  __init__.py  demo_usage.py  pyproject.toml  requirements.txt
processors/: __init__.py  agent_component.py  agent_component_wrapper.py  agent_implementation_example.py  base_processor.py  integrated_parallel_processor.py  parallel_agent_processor.py  parallel_dataframe_processor.py  parallel_query_processor.py  simple_dataframe_processor.py
tests/: __init__.py  test_all_components.py  test_extract_text_from_inputs.py  test_gemini_agent.py  test_parallel_agent_processor.py  test_parallel_agent_processor_mock.py  test_parallel_gemini.py  test_parallel_processing.py  test_parallel_processor.py  test_parallel_query_processor.py  test_parallel_text_agent.py  test_parallel_text_agent_standalone.py  test_text_extractor.py  verify_installation.bat  verify_installation.py
utils/: __init__.py  result_processing.py  utils.py
